--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>This is my first git command</title>
-    <body>
-        <p>Hello world</p>
-    </body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
+<body>
+    <p>Hello World</p>
+</body>
+</html>
